# shipboard-fire-response-rl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  demo_feedback_system.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_import_test.py  simple_test.py  test_system.py  torch_test.py
.github/workflows/: ci-cd.yml
docs/: API.md  EXECUTIVE_SUMMARY.md  FEEDBACK_SYSTEM.md  TECHNICAL_SUMMARY.md
scripts/: setup.bat  setup.sh
src/shipboard_rl/: __init__.py
src/shipboard_rl/core/: __init__.py  enhanced_dqn.py
src/shipboard_rl/feedback/: __init__.py  feedback_api.py  feedback_system.py  trainer_integration.py
src/shipboard_rl/scenario/: __init__.py  generator.py
src/shipboard_rl/training/: __init__.py  trainer.py
tests/: conftest.py
tests/fixtures/: test_schema.sql
tests/integration/: test_system_integration.py
tests/unit/: test_enhanced_dqn.py
